Added directory for source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
+# PROJECT NAME
 project(PirexPickleBlowfish)
-cmake_minimum_required(VERSION 2.8)
-aux_source_directory(. SRC_LIST)
-add_executable(${PROJECT_NAME} ${SRC_LIST})
 
+# CMAKE VERSION REQUIRED
+cmake_minimum_required(VERSION 2.8)
+
+#aux_source_directory(. SRC_LIST)
+#add_executable(${PROJECT_NAME} ${SRC_LIST})
+
+
+#FILE(MAKE_DIRECTORY "source")
+add_subdirectory(src)
