--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,6 @@ project(PirexPickleBlowfish)
 # CMAKE VERSION REQUIRED
 cmake_minimum_required(VERSION 2.8)
 
-#aux_source_directory(. SRC_LIST)
-#add_executable(${PROJECT_NAME} ${SRC_LIST})
-
-
-#FILE(MAKE_DIRECTORY "source")
 add_subdirectory(src)
+
+add_subdirectory(test)
