--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(PirexPickleBlowfish)
 # CMAKE VERSION REQUIRED
 cmake_minimum_required(VERSION 2.8)
 
+# ENABLE add_test() COMMAND
+enable_testing()
+
+
+# ADD SUBDIRECTIORIES
 add_subdirectory(src)
 
 add_subdirectory(test)
