--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ cmake_minimum_required(VERSION 2.8)
 # ENABLE add_test() COMMAND
 enable_testing()
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # ADD SUBDIRECTIORIES
 add_subdirectory(src)
 
-add_subdirectory(test)
