--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,6 +1,24 @@
-SET(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(GMOCK_DIR "../../../../gmock-1.7.0"
+    CACHE PATH "The path to the GoogleMock test framework.")
 
-FILE(GLOB files *.cpp)
+
+add_subdirectory(${GMOCK_DIR} ${CMAKE_BINARY_DIR}/gmock)
+
+
+include_directories(SYSTEM ${GMOCK_DIR}/gtest/include
+                ${GMOCK_DIR}/include)
+
+add_executable(DollarTest DollarTest.cpp)
+
+target_link_libraries(DollarTest Dollar gmock_main)
+
+add_test(DollarTest DollarTest)
+
+#add_library(Test )
+
+#SET(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+#FILE(GLOB files *.cpp)
 
 #FIND_PACKAGE( Qt5Core REQUIRED )
 
