messing with cmake

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -3,7 +3,8 @@
 #set(GMOCK_DIR "../../../../Qt5.1.1
 #    CACHE PATH "The path to the GoogleMock test framework.")
 
-find_package(Qt5Widgets REQUIRED)
+#set(QT5_DIRECTORY "C:\
+find_package(Qt5Widgets)
 
 #add_subdirectory(${GMOCK_DIR} ${CMAKE_BINARY_DIR}/gmock)
 
@@ -13,7 +14,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_executable(BoardSample BoardSample.cpp)
 
-qt5_use_modules(BoardSample Widgets)
+#qt5_use_modules(BoardSample Widgets)
 #target_link_libraries(DollarTest Dollar gmock_main)
 
 #add_test(DollarTest DollarTest)
