--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -19,6 +19,7 @@ qt5_wrap_ui(UI_H_LIST ${UI_LIST})
 add_executable(BoardSample ${SRC_LIST} ${UI_H_LIST})
 
 qt5_use_modules(BoardSample Widgets)
+#target_link_libraries(BoardSample Qt5::Widgets)
 
 # =========================================================
 # USING OLDER CMAKE
