Building cmake under windows
Added path to Qt5 library, resolving issues in cmake build on Windows.
Still not able to build project though.

Warning: Location of Qt5 library hardcoded to my system installation of
Qt. Need to find another way of adding it on Windows since cmake doesn't
have Qt5Config.cmake or Qt5WidgetsConfig.cmake.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,10 @@
 # =========================================================
 cmake_minimum_required(VERSION 2.8.8)
 
+if(WIN32)
+    set(Qt5Widgets_DIR "C:/Qt/5.1.1/msvc2012_64_opengl/lib/cmake/Qt5Widgets")
+endif()
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
