--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -11,9 +11,12 @@ include_directories(SYSTEM ${GMOCK_DIR}/gtest/include
                 ${GMOCK_DIR}/include)
 
 add_executable(DollarTest DollarTest.cpp)
+add_executable(MainWindowSampleTest MainWindowSampleTest.cpp)
 
 target_link_libraries(DollarTest Dollar gmock_main)
+target_link_libraries(MainWindowSampleTest MainWindowSample)
 
 add_test(DollarTest DollarTest)
+add_test(MainWindowSampleTest MainWindowSampleTest)
 
 
