Fixed slot names
Changed slot names to match object names in MainWindowSample class. That
made tests pass and caused proper behaviour.

Added comment to CMakeLists.txt about gmock.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 # PATH: PirexPickleBlowfish/src/test/CMakeLists.txt
 
+# setting gmock directory. By default using gmock v1.7.0
+# installed in home directory (~/gmock-1.7.0)
 set(GMOCK_DIR "../../../../gmock-1.7.0"
     CACHE PATH "The path to the GoogleMock test framework.")
 
