--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -18,14 +18,14 @@ set(GUI_TEST_SRC MainWindowSampleTest.cpp)
 set(GUI_TEST_LIBRARIES MainWindowSample
           ${QT_QTTEST_LIBRARY}
           ${QT_LIBRARIES})
-add_executable(GUI_TEST ${GUI_TEST_SRC})
-qt5_use_modules(GUI_TEST Test)
+add_executable(GuiTest ${GUI_TEST_SRC})
+qt5_use_modules(GuiTest Test)
 
 target_link_libraries(DollarTest Dollar gmock_main)
-target_link_libraries(GUI_TEST ${GUI_TEST_LIBRARIES})
+target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 
 
 add_test(DollarTest DollarTest)
-add_test(GUI_TEST GUI_TEST)
+add_test(GuiTest GuiTest)
 
 
