--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,24 +15,28 @@ set(CMAKE_AUTOMOC ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-find_package(Qt5Widgets REQUIRED)
+#find_package(Qt5Widgets REQUIRED)
 
 set(SRC_LIST main.cpp)
-set(BOARD_SAMPLE_SRC_LIST BoardSample.cpp)
-set(MAIN_WINDOW_SAMPLE_SRC_LIST MainWindowSample.cpp)
-set(UI_LIST BoardSample.ui MainWindowSample.ui)
+#set(BOARD_SAMPLE_SRC_LIST BoardSample.cpp)
+#set(MAIN_WINDOW_SAMPLE_SRC_LIST MainWindowSample.cpp)
+#set(UI_LIST BoardSample.ui MainWindowSample.ui)
 
-qt5_wrap_ui(UI_H_LIST ${UI_LIST})
+#qt5_wrap_ui(UI_H_LIST ${UI_LIST})
 
-add_library(BoardSample ${BOARD_SAMPLE_SRC_LIST} ${UI_H_LIST})
-add_library(MainWindowSample ${MAIN_WINDOW_SAMPLE_SRC_LIST} ${UI_H_LIST})
-add_library(Dollar Dollar.cpp)
+#add_library(BoardSample ${BOARD_SAMPLE_SRC_LIST} ${UI_H_LIST})
+#add_library(MainWindowSample ${MAIN_WINDOW_SAMPLE_SRC_LIST} ${UI_H_LIST})
+#add_library(Dollar Dollar.cpp)
 
-qt5_use_modules(BoardSample Widgets)
-qt5_use_modules(MainWindowSample Widgets)
+#qt5_use_modules(BoardSample Widgets)
+#qt5_use_modules(MainWindowSample Widgets)
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} Dollar BoardSample MainWindowSample)
+
+add_subdirectory(gui)
+
+add_subdirectory(logic)
 
 add_subdirectory(test)
 
