--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,19 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 find_package(Qt5Widgets REQUIRED)
 
 set(SRC_LIST main.cpp)
+
+#to link dynamic boost libraries
+add_definitions(-DBOOST_LOG_DYN_LINK)
+
+find_package(Boost 1.55 COMPONENTS thread system log log_setup REQUIRED )
+include_directories(${Boost_INCLUDE_DIR} )
+
+add_library(Logger Logger.cpp)
+target_link_libraries(Logger ${Boost_LIBRARIES})
+
 add_executable(${PROJECT_NAME} ${SRC_LIST})
-target_link_libraries(${PROJECT_NAME} logic MainWindowSample)
+
+target_link_libraries(${PROJECT_NAME} logic MainWindowSample Logger)
 
 add_subdirectory(gui)
 add_subdirectory(logic)
