Cleaning mess in develop branch
Created proper directory tree:
/src
	/ai
	/gui
	/logic
	/test

Cleaned up CMakeLists.txt files, removing commented lines and unused commands,
organizing commands, added better way of finding source files and linking
libraries to executables.

Removed classes that have been written for testing purpouses only and are no
longer needed:
/src/BoardSample
/src/Dollar
/src/Dollar/Dollar
/src/MainWindowSample

Fixed some dependencies on the old files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,66 +1,28 @@
 # PATH: PirexPickleBlowfish/src/CMakeLists.txt
 
-
 # =========================================================
 # USING NEW CMAKE
 # =========================================================
 cmake_minimum_required(VERSION 2.8.8)
 
-if(WIN32)
-    set(Qt5Widgets_DIR "C:/Qt/5.1.1/msvc2012_64_opengl/lib/cmake/Qt5Widgets")
-endif()
-
+# basic settings
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+# finding Qt5 package
 find_package(Qt5Widgets REQUIRED)
 
+# creating main executable program
 set(SRC_LIST main.cpp)
-#set(BOARD_SAMPLE_SRC_LIST BoardSample.cpp)
-#set(MAIN_WINDOW_SAMPLE_SRC_LIST MainWindowSample.cpp)
-#set(UI_LIST BoardSample.ui MainWindowSample.ui)
-
-#qt5_wrap_ui(UI_H_LIST ${UI_LIST})
-
-#add_library(BoardSample ${BOARD_SAMPLE_SRC_LIST} ${UI_H_LIST})
-#add_library(MainWindowSample ${MAIN_WINDOW_SAMPLE_SRC_LIST} ${UI_H_LIST})
-#add_library(Dollar Dollar.cpp)
-
-#qt5_use_modules(BoardSample Widgets)
-#qt5_use_modules(MainWindowSample Widgets)
-
 add_executable(${PROJECT_NAME} ${SRC_LIST})
-target_link_libraries(${PROJECT_NAME} Dollar BoardSample MainWindowSample)
+target_link_libraries(${PROJECT_NAME} logic MainWindowSample)
 
+# =========================================================
+# ADDING SUBDIRECTORIES
+# =========================================================
+add_subdirectory(ai)
 add_subdirectory(gui)
-
 add_subdirectory(logic)
-
 add_subdirectory(test)
-
-# =========================================================
-# OLD structure
-# =========================================================
-#set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#
-##FILE(GLOB files *.cpp)
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-#include_directories(${CMAKE_CURRENT_BINARY_DIR})
-#
-#find_package(Qt5Widgets REQUIRED)
-#
-##aux_source_directory(. SRC_LIST)
-#set(SRC_LIST main.cpp)
-#
-#add_executable(${PROJECT_NAME} ${SRC_LIST})
-#
-##add_library(Dollar Dollar.cpp)
-#target_link_libraries(${PROJECT_NAME} Dollar BoardSample)
-#
-#add_subdirectory(test)
-#
-#add_subdirectory(GUI)
-#
-#add_subdirectory(Dollar)
