--- a/src/logic/CMakeLists.txt
+++ b/src/logic/CMakeLists.txt
@@ -1,10 +1,4 @@
 # PATH: PirexPickleBlowfish/src/logic/CMakeLists.txt
 
-set(SRC_LIST Dollar.cpp)
-add_library(Dollar ${SRC_LIST})
-
-#target_link_libraries(DollarTest Dollar gmock_main)
-
-#add_test(DollarTest DollarTest)
-
-
+file(GLOB SRC_LIST *.cpp)
+add_library(logic ${SRC_LIST})
