--- a/src/ai/CMakeLists.txt
+++ b/src/ai/CMakeLists.txt
@@ -1,3 +1,5 @@
+#REVIEW: do we really need this PATH comment?
+#REVIEW: for now we don't have ai and we not writing it so it shouldn't even be here
 # PATH: PirexPickleBlowfish/src/ai/CMakeLists.txt
 
 #file(GLOB SRC_LIST *.cpp)
