--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,7 +1,3 @@
-#REVIEW: do we really need this PATH comment?
-# PATH: PirexPickleBlowfish/src/test/CMakeLists.txt
-
-#REVIEW: this comment is for example necessary because it explains not trivial code
 # setting gmock directory. By default using gmock v1.7.0
 # installed in home directory (~/gmock-1.7.0)
 set(GMOCK_DIR "../../../../gmock-1.7.0"
@@ -9,22 +5,18 @@ set(GMOCK_DIR "../../../../gmock-1.7.0"
 
 add_subdirectory(${GMOCK_DIR} ${CMAKE_BINARY_DIR}/gmock)
 
-#REVIEW: maybe oneliner is better?
-include_directories(SYSTEM ${GMOCK_DIR}/gtest/include
-                ${GMOCK_DIR}/include)
+include_directories(SYSTEM ${GMOCK_DIR}/gtest/include ${GMOCK_DIR}/include)
 
-add_executable(DollarTest DollarTest.cpp)
-
+set(DOLLAR_TEST_SRC DollarTest.cpp)
 set(GUI_TEST_SRC MainWindowSampleTest.cpp)
-#REVIEW: maybe oneliner is better?
-set(GUI_TEST_LIBRARIES MainWindowSample
-          ${QT_QTTEST_LIBRARY}
-          ${QT_LIBRARIES})
+set(GUI_TEST_LIBRARIES MainWindowSample ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})
+
+add_executable(DollarTest ${DOLLAR_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
-qt5_use_modules(GuiTest Test)
 
 target_link_libraries(DollarTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
+qt5_use_modules(GuiTest Test)
 
 add_test(DollarTest DollarTest)
 add_test(GuiTest GuiTest)
