Added custom cmake find for GMock
still not working though. Added cmake temp files to .gitignore.

Conflicts:

	CMakeLists.txt
	src/test/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ project(PirexPickleBlowfish)
 
 cmake_minimum_required(VERSION 2.8)
 
+# CUSTOM CMAKE FIND LOCATION
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
+
+# ENABLE add_test() COMMAND
 enable_testing()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
