--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -6,15 +6,19 @@ set(CMAKE_AUTOMOC ON)
 include_directories(SYSTEM ${GMOCK_DIR}/gtest/include ${GMOCK_DIR}/include)
 
 set(DOLLAR_TEST_SRC DollarTest.cpp)
+set(TOKEN_TEST_SRC TokenTest.cpp)
 set(GUI_TEST_SRC MainWindowSampleTest.cpp)
 set(GUI_TEST_LIBRARIES MainWindowSample ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})
 
 add_executable(DollarTest ${DOLLAR_TEST_SRC})
+add_executable(TokenTest ${TOKEN_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
 
 target_link_libraries(DollarTest logic gmock_main)
+target_link_libraries(TokenTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
 
 add_test(DollarTest DollarTest)
+add_test(TokenTest TokenTest)
 add_test(GuiTest GuiTest)
