--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,10 @@ enable_testing()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin CACHE PATH "${CMAKE_PROJECT_NAME} install prefix" FORCE)
+ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+
+
 add_subdirectory(src)
 
