--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -16,5 +16,6 @@ set(UI_LIST MainWindowSample.ui)
 qt5_wrap_ui(UI_H_LIST ${UI_LIST})
 
 add_library(MainWindowSample ${MAIN_WINDOW_SAMPLE_SRC_LIST} ${UI_H_LIST})
+install(TARGETS MainWindowSample DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 qt5_use_modules(MainWindowSample Widgets)
