--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,9 @@ add_definitions(-DBOOST_LOG_DYN_LINK)
 find_package(Boost 1.55 COMPONENTS thread system log log_setup REQUIRED )
 include_directories(${Boost_INCLUDE_DIR} )
 
+add_library(BoostJson BoostJson.cpp Json.hpp)
+target_link_libraries(BoostJson ${Boost_LIBRARIES})
+
 add_library(BoostJsonParser BoostJsonParser.cpp JsonParser.hpp)
 target_link_libraries(BoostJsonParser ${Boost_LIBRARIES})
 
