--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(JsonParserTest ${JSON_PARSER_TEST_SRC})
 add_executable(TokenTest ${TOKEN_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
 
-target_link_libraries(JsonParserTest BoostJson gmock_main)
+target_link_libraries(JsonParserTest BoostJson BoostJsonParser gmock_main)
 target_link_libraries(TokenTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
