Json parser introduced
New parser for json files implemented as a singleton. Proper tests added. Previous implementations of json and json parser removed.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,13 +4,11 @@ set(TOKEN_TEST_SRC TokenTest.cpp)
 set(GUI_TEST_SRC MainWindowSampleTest.cpp)
 set(GUI_TEST_LIBRARIES MainWindowSample ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})
 
-add_executable(JsonParserTest ${JSON_PARSER_TEST_SRC})
 add_executable(TokenLoaderTest ${TOKEN_LOADER_TEST_SRC})
 add_executable(TokenTest ${TOKEN_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
 
-target_link_libraries(JsonParserTest BoostJson BoostJsonParser QtJson QtJsonParser gmock_main)
-target_link_libraries(TokenLoaderTest Json gmock_main)
+target_link_libraries(TokenLoaderTest Json JsonParser gmock_main)
 target_link_libraries(TokenTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
@@ -18,9 +16,7 @@ qt5_use_modules(GuiTest Test)
 install(TARGETS TokenTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS TokenLoaderTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS GuiTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS JsonParserTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-add_test(JsonParserTest JsonParserTest)
 add_test(TokenLoaderTest TokenLoaderTest)
 add_test(TokenTest TokenTest)
 add_test(GuiTest GuiTest)
