Method translating army from json to enum
It will be private so i took approach with friend tests which made me move setting gmock env to cmakelists file in src directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library(JsonParser JsonParser.cpp)
 target_link_libraries(JsonParser Json)
 
 add_library(TokenLoader TokenLoader.cpp)
-target_link_libraries(TokenLoader JsonParser)
+target_link_libraries(TokenLoader JsonParser gmock_main)
 
 add_library(Logger Logger.cpp)
 target_link_libraries(Logger ${Boost_LIBRARIES})
