Translating strings to enums moved to another class

--- a/src/setup/CMakeLists.txt
+++ b/src/setup/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8.8)
 
+set(STRING_TO_ENUM_TRANSLATOR_SRC StringToEnumTranslator.cpp ../logic/Token.hpp)
+add_library(StringToEnumTranslator ${STRING_TO_ENUM_TRANSLATOR_SRC} )
+
 add_library(Json Json.cpp)
 target_link_libraries(Json ${QT_LIBRARIES})
 qt5_use_modules(Json Core)
@@ -8,4 +11,4 @@ add_library(JsonParser JsonParser.cpp)
 target_link_libraries(JsonParser Json)
 
 add_library(TokenLoader TokenLoader.cpp)
-target_link_libraries(TokenLoader JsonParser gmock_main)
+target_link_libraries(TokenLoader JsonParser StringToEnumTranslator gmock_main)
