Add testRemoveAttribute, move gtest up in cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,14 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 find_package(Qt5Widgets REQUIRED)
 
+set(GMOCK_DIR $ENV{GMOCK_ROOT})
+
+add_subdirectory(${GMOCK_DIR} ${CMAKE_BINARY_DIR}/gmock)
+set(CMAKE_AUTOMOC ON)
+
+include_directories(SYSTEM ${GMOCK_DIR}/gtest/include ${GMOCK_DIR}/include)
+
+
 set(SRC_LIST main.cpp)
 
 #to link dynamic boost libraries
