Move Side to separate .hpp file

--- a/src/logic/CMakeLists.txt
+++ b/src/logic/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB SRC_LIST *.cpp)
-add_library(logic ${SRC_LIST})
+file(GLOB HPP_LIST *.hpp)
+add_library(logic ${SRC_LIST} ${HPP_LIST})
 install(TARGETS logic DESTINATION ${CMAKE_INSTALL_PREFIX})
