New methods in Json, testing decorating module started
New methods in Json will be used to load unit tokens. Testing decorating modules cannot be tested because of untested decorators which needs to be fixed ASAP.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -15,6 +15,8 @@ qt5_use_modules(GuiTest Test)
 #test files to TokenLoaderTest
 file(COPY test.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 install(FILES test.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY upgradesParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES upgradesParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 install(TARGETS TokenTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS TokenLoaderTest DESTINATION ${CMAKE_INSTALL_PREFIX})
